# HNH_tTEST

./: .gitignore  CMakeLists.txt  cnn.py  main.cpp  setup.sh  train.py
Armor/: Armor.hpp  ArmorDetector.cpp  matchArmors.cpp
build-linux/: CMakeCache.txt  HNH  Makefile  cmake_install.cmake
build-linux/common/: Makefile  cmake_install.cmake
build-linux/common/kalman/: Makefile  cmake_install.cmake
build-linux/common/math/: Makefile  cmake_install.cmake
build-linux/modules/: Makefile  cmake_install.cmake
common/: CMakeLists.txt
common/kalman/include/: KalmanFilterX.hpp
common/math/: CMakeLists.txt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: ros_opencv.pc
devel/lib/ros_opencv/: ros_opencv
devel/share/ros_opencv/cmake/: ros_opencvConfig.cmake
modules/: CMakeLists.txt
modules/A2/: A2.h
modules/M1/: M1.h
modules/M2/: M2.h
src/ros_opencv/launch/: ros_opencv.launch
src/ros_opencv/src/: main.cpp
src/ros_opencv/src/Armor/: ArmorDetect.cpp
src/ros_opencv/src/Pose/: AngleSolver.cpp  AngleSolver.hpp
